--- a/hp-vlans.yml
+++ b/hp-vlans.yml
@@ -4,14 +4,23 @@
     hosts: switches 
     gather_facts: no
     connection: local
-
+    vars_files:
+      - vars-hp-vlans.yml 
     tasks:
+      - name: ensure VLAN {{ item }} exists
+        comware_vlan: 
+          vlanid: "{{ item }}"
+          name: "VLAN_{{ item }}" 
+          descr: LOCALSEGMENT 
+          username: "{{ username }}" 
+          password: "{{ password }}"
+          hostname: "{{ inventory_hostname }}"
+          state: present
+        with_items:
+          - "{{ vlan_list }}"
 
-      - name: ensure VLAN 10 exists
-        comware_vlan: vlanid=10 name=VLAN10_WEB descr=LOCALSEGMENT username={{ username }} password={{ password }} hostname={{ inventory_hostname }}
-
-      - name: ensure VLAN 20 exists
-        comware_vlan: vlanid=20 name=VLAN20 state=present username={{ username }} password={{ password }} hostname={{ inventory_hostname }}
+   #   - name: ensure VLAN 20 exists
+   #     comware_vlan: vlanid=20 name=VLAN20 state=present username={{ username }} password={{ password }} hostname={{ inventory_hostname }}
 
 #      - name: ensure VLAN 10 does not exist
 #        comware_vlan: vlanid=10 state=absent username={{ username }} password={{ password }} hostname={{ inventory_hostname }}
