--- a/vars-hp-interface-vlan-config.yml
+++ b/vars-hp-interface-vlan-config.yml
@@ -1,3 +1,4 @@
 ---
- # interface_name: FortyGigE1/0/2 
-  vlans: "1-3,5,8-10" 
+ interface_name: HundredGigE1/0/30 
+ #interface_name: Twenty-FiveGigE1/0/9 
+ vlans: "10,20" 
